# clipper

./: .envrc  .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flake.nix  osv-scanner.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustfmt.toml  test-server.ts  tsconfig.json
.github/workflows/: ci.yml
app/: .metadata  README.md  pubspec.yaml
app/android/: .gitignore  build.gradle.kts  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/clipper/clipper_app/: MainActivity.kt  SyncForegroundService.kt
app/android/app/src/main/res/drawable/: ic_sync_notification.xml
app/android/app/src/main/res/xml/: file_paths.xml
app/integration_test/: simple_test.dart
app/lib/: main.dart
app/lib/platform/: web_runtime.dart  web_runtime_stub.dart  web_runtime_web.dart
app/lib/screens/: home_screen.dart  login_screen.dart
app/lib/services/: background_sync.dart  secure_clipboard.dart
app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
app/lib/src/rust/api/: clipper.dart
app/lib/utils/: app_platform.dart  browser_download_stub.dart  browser_download_web.dart  errors.dart  file_helpers.dart  formatters.dart
app/lib/widgets/: app_status.dart  clipper_brand.dart  connection_badge.dart  loading_filled_button.dart  loading_icon_button.dart  responsive_card_scaffold.dart  sync_list_tile_card.dart
app/macos/: Podfile
app/macos/Runner/: MainFlutterWindow.swift  bridge_generated.h
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/rust/: Cargo.toml
app/rust/src/: daemon_process.rs  error.rs  frb_generated.rs  ipc_auth.rs  lib.rs  runtime.rs  transport.rs
app/rust/src/api/: clipper.rs
app/rust_builder/: pubspec.yaml
app/rust_builder/android/: build.gradle  settings.gradle
app/rust_builder/android/src/main/: AndroidManifest.xml
app/rust_builder/cargokit/: PATCHES.md  run_build_tool.sh
app/rust_builder/cargokit/build_tool/: pubspec.yaml
app/rust_builder/cargokit/build_tool/lib/src/: builder.dart  rustup.dart
app/rust_builder/cargokit/gradle/: plugin.gradle
app/rust_builder/ios/: rust_lib_clipper_app.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: rust_lib_clipper_app.podspec
app/rust_builder/macos/rust_lib_clipper_app/: Package.swift
app/rust_builder/macos/rust_lib_clipper_app/Sources/rust_lib_clipper_app/: RustLibClipperApp.swift
app/rust_builder/windows/: CMakeLists.txt
app/test/: widget_test.dart
app/web/: index.html
crates/api-types/: Cargo.toml
crates/api-types/src/: lib.rs
crates/app-types/: Cargo.toml
crates/app-types/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: api_client.rs  clipboard_privacy.rs  clipboard_watcher.rs  clipboard_watcher_linux.rs  clipboard_watcher_macos.rs  engine.rs  lib.rs  local_store.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  models.rs
crates/daemon/: Cargo.toml  com.clipper.daemon.plist
crates/daemon-types/: Cargo.toml
crates/daemon-types/src/: ipc_path.rs  lib.rs  protocol.rs  state.rs
crates/daemon/src/: clients.rs  engine_manager.rs  error.rs  handler.rs  keychain.rs  main.rs  platform_clipboard.rs  protocol.rs
crates/fs-txn/: Cargo.toml
crates/fs-txn/src/: lib.rs
crates/mobile-uniffi/: Cargo.toml
crates/mobile-uniffi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  cleanup.rs  collab_sync.rs  config.rs  error.rs  main.rs  rate_limit.rs  secret.rs  secret_storage.rs  state.rs  storage_quota.rs  ws.rs
crates/server/src/entity/: access_keys.rs  clipboard_item.rs  clipboard_items.rs  collab_docs.rs  device.rs  devices.rs  event_log.rs  file.rs  files.rs  mod.rs  object_payloads.rs  objects.rs  server_config.rs  session.rs  sessions.rs  users.rs
crates/server/src/migration/: m20260312_000001_create_tables.rs  m20260615_000002_collab_docs.rs  mod.rs
crates/server/src/routes/: auth.rs  clipboard.rs  collab.rs  files.rs  health.rs  mod.rs  objects.rs  sync.rs
crates/web-wasm/: Cargo.toml
crates/web-wasm/src/: lib.rs
docs/: backend-review-flow.md  collab-docs-plan.md  collab-integration.md  development-environment.md  local-at-rest-encryption.md  local-ipc-security.md  local-store-p2p-roadmap.md  object-envelopes.md  opaque.md  revocation.md  rust-code-review.md  security-review-2026-06-04.md  security-review-2026-06-14.md  security-review.md  server-resource-limits.md  server-secret.md  server-visible-mcp.md  type-boundaries.md  user-data-scoping.md  web-client-path.md  ws-sync-flow.md  ws-sync-roadmap.md
mobile/: app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
mobile/src/: App.tsx  backend.ts  tamagui.config.ts
patches/: uniffi-bindgen-react-native@0.31.0-3.patch
scripts/: .env.android  .env.base  add-access-key.sh  clipper-server.ts  common.sh  dev-shell-env.sh  fmt.sh  frb-build-web.sh  frb-build-web.ts  frb-generate.sh  init-server.sh  macos-build.sh  macos-build.ts  nuke.sh  rustfmt.sh  script-common.ts  server-entities.sh  server-entities.ts  tasks.ts  wasm-check.sh  web-build.sh  web-build.ts  web-serve.py  web-serve.sh  web-serve.ts
web/: .oxlintrc.json  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: _redirects
web/src/: App.tsx  CodeEditor.tsx  ErrorBoundary.tsx  LICENSE  LanguageSelect.tsx  languages.ts  main.tsx  styles.css  tamagui.config.ts  types.ts
web/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: daemon_client.rs  daemon_spawn.rs  ipc_secret.rs  lib.rs  main.rs
web/src/backend/: index.ts  tauri.ts  types.ts  wasm.ts
