[workspace]
members = [
    "crates/api-types",
    "crates/app-types",
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/daemon",
    "crates/daemon-types",
    "app/rust",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# clipper crates
clipper-core = { path = "crates/core" }
clipper-api-types = { path = "crates/api-types" }
clipper-app-types = { path = "crates/app-types" }
clipper-client = { path = "crates/client" }
clipper-daemon-types = { path = "crates/daemon-types" }
