[workspace]
members = [
    "crates/api-types",
    "crates/app-types",
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/daemon",
    "crates/daemon-types",
    "crates/fs-txn",
    "app/rust",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# clipper crates
clipper-core = { path = "crates/core" }
clipper-api-types = { path = "crates/api-types" }
clipper-app-types = { path = "crates/app-types" }
clipper-client = { path = "crates/client" }
clipper-daemon-types = { path = "crates/daemon-types" }
clipper-fs-txn = { path = "crates/fs-txn" }

# shared third-party crates
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6.0.0"
futures-util = "0.3.32"
garde = { version = "0.23.0", features = ["derive"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
hmac = "0.12.1"
libc = "0.2.186"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
rand = "0.10.1"
security-framework = "3.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.1"
wl-clipboard-rs = "0.9.3"
zeroize = { version = "1.8.2", features = ["derive"] }
