[package]
name = "rust_lib_clipper_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
clipper-client.workspace = true
clipper-app-types.workspace = true
clipper-daemon-types.workspace = true
flutter_rust_bridge = { version = "=2.12.0", default-features = false, features = [
    "dart-opaque",
    "log",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["js", "v7"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["net", "io-util", "sync", "rt", "time", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
hmac = "0.12.1"
rand = "0.10.1"
security-framework = "3.7.0"
sha2 = "0.10.9"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
