[package]
name = "rust_lib_clipper_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
clipper-client.workspace = true
clipper-app-types.workspace = true
clipper-daemon-types.workspace = true
flutter_rust_bridge = { version = "=2.12.0", default-features = false, features = [
    "dart-opaque",
    "log",
    "portable-atomic",
    "rust-async",
    "thread-pool",
    "user-utils",
    "wasm-start",
] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["js", "v7"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "time", "macros"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
hmac.workspace = true
rand.workspace = true
sha2.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
