[package]
name = "clipper-api-types"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
garde.workspace = true
serde.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
postcard.workspace = true
