[package]
name = "clipper-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
clipper-core.workspace = true
clipper-app-types.workspace = true
base64.workspace = true
chrono.workspace = true
postcard.workspace = true
reqwest = { version = "0.13.4", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tracing.workspace = true
url = "2.5.8"
uuid = { workspace = true, features = ["js", "v7"] }
zeroize.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom.workspace = true
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
web-sys = { version = "0.3.99", features = ["Storage", "Window"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
