[package]
name = "clipper-client"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
clipper-core.workspace = true
clipper-app-types.workspace = true
base64.workspace = true
chrono.workspace = true
postcard.workspace = true
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "stream",
  "charset",
  "http2",
  "system-proxy",
  # Pull rustls without a baked-in crypto provider so the client can pin ring
  # instead of rustls's default (aws-lc-rs). See the rustls dep note below.
  "rustls-no-provider",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-util.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }
tracing.workspace = true
url = "2.5.8"
uuid = { workspace = true, features = ["js", "v7"] }
zeroize.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
# Pin rustls to the `ring` provider. rustls's default provider (aws-lc-rs)
# aborts inside aws-lc's CPU jitter-entropy self-test when cross-compiled for
# Android, crashing the app on the first TLS connection (login). ring uses the
# OS CSPRNG and has no such path. `webpki-roots` supplies a bundled trust store
# so the HTTP client needs no Android trust-store JNI plumbing, matching the
# WebSocket path (tokio-tungstenite `rustls-tls-webpki-roots`).
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "logging",
] }
webpki-roots = "0.26"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-timers = { version = "0.4.0", features = ["futures"] }
getrandom.workspace = true
js-sys = "0.3.102"
wasm-bindgen = "0.2.125"
wasm-bindgen-futures = "0.4.75"
web-sys = { version = "0.3.102", features = [
  "CloseEvent",
  "Event",
  "MessageEvent",
  "Storage",
  "WebSocket",
  "Window",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs.workspace = true

[dev-dependencies]
tempfile.workspace = true
