[package]
name = "clipper-core"
version.workspace = true
edition.workspace = true

[dependencies]
clipper-api-types.workspace = true
argon2.workspace = true
base64.workspace = true
chacha20poly1305 = "0.10.1"
chrono.workspace = true
hkdf = "0.12.4"
opaque-ke = { version = "4.1.0-pre.2", features = ["argon2", "std"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroize.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom.workspace = true

[dev-dependencies]
