[package]
name = "clipper-core"
version.workspace = true
edition.workspace = true

[dependencies]
clipper-api-types.workspace = true
argon2.workspace = true
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
opaque-ke = { version = "4.1.0-pre.2", features = ["argon2", "std"] }
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom.workspace = true

[dev-dependencies]
