[package]
name = "clipper-daemon-types"
version.workspace = true
edition.workspace = true

[dependencies]
clipper-app-types.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
dirs.workspace = true
libc.workspace = true
