[package]
name = "clipper-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clipper-daemon"
path = "src/main.rs"

[dependencies]
clipper-client.workspace = true
clipper-core.workspace = true
clipper-daemon-types.workspace = true
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full", "net", "signal", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"
