[package]
name = "clipper-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clipper-daemon"
path = "src/main.rs"

[dependencies]

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
clipper-client.workspace = true
clipper-core.workspace = true
clipper-daemon-types.workspace = true
dirs.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "net", "signal", "io-util"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs.workspace = true
