[package]
name = "clipper-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clipper-server"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws", "macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clipper-core.workspace = true
futures-util = "0.3.32"
garde = { version = "0.23.0", features = ["derive"] }
governor = "0.10.4"
ipnet = { version = "2.12.0", features = ["serde"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.1"
rpassword = "7.5.3"
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "limit", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
