[package]
name = "clipper-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "clipper-server"
path = "src/main.rs"

[dependencies]
argon2.workspace = true
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws", "macros"] }
base64.workspace = true
chrono.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
clipper-core.workspace = true
clipper-fs-txn.workspace = true
futures-util.workspace = true
garde.workspace = true
governor = "0.10.4"
ipnet = { version = "2.12.0", features = ["serde"] }
postcard.workspace = true
rand.workspace = true
rpassword = "7.5.4"
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = [
  "runtime-tokio-rustls",
] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.1.2"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace", "limit", "cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true, features = ["v7", "serde"] }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
