[package]
name = "clipper-web-wasm"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
clipper-client.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook = "0.1.7"
js-sys = "0.3.99"
