[package]
name = "clipper-desktop"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[lib]
name = "clipper_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
clipper-app-types.workspace = true
clipper-client.workspace = true
serde.workspace = true
tauri.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-dialog.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zeroize.workspace = true
